fixed padding issue on small screens

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
     --fw-reg: 300;
     --fw-bold: 900;
     
-    --clr-light: #e7e7e7;
-    --clr-dark: #141414;
-    --clr-accent: #920303;
+    --clr-light: #EEEEEE;
+    --clr-dark: #222831;
+    --clr-accent: #76ABAE;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -56,6 +56,12 @@ header {
 
 section {
     padding: 5em 7em;
+}
+
+@media (max-width: 600px) {
+    section {
+        padding: 5em 1em;
+    }
 }
 
 img {
@@ -308,9 +314,13 @@ header {
 /* Portfolio Section */
 
 .my-work {
-    background-color: var(--clr-dark);
+    /* background-color: var(--clr-dark); */
     color: var(--clr-light);
     text-align: center;
+}
+
+.section__title--work {
+    color: var(--clr-dark);
 }
 
 .section__subtitle--work {
@@ -321,13 +331,25 @@ header {
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 20px;
 }
 
 .portfolio__item {
     background: var(--clr-accent);
+    position: relative;
     overflow: hidden;
+    padding: .5em;
+    border-radius: 10px;
+    justify-content: space-between;
+}
+
+.portfolio__link {
+    position: absolute;
+    bottom: .3em;
+    right: .3em;
+    color: var(--clr-light);
+    font-size: var(--fs-h3);
 }
 
 .portfolio__img {
@@ -336,15 +358,24 @@ header {
         opacity 250ms linear;
 }
 
+.portfolio__text {
+    padding: 1em;
+}
+
+.portfolio__title {
+    font-size: var(--fs-h3);
+    margin-bottom: 0.5rem;
+}
+
 .portfolio__description {
     color: var(--clr-light);
     font-size: var(--fs-h3);
-    padding: 10px;
+    padding: 1em;
     text-align: center;
     font-size: 1rem;
 }
 
-.portfolio__img:hover, 
+.portfolio__link:hover, 
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.1);
     opacity: .75;
